Clean ups
- Use short array declaration
- Use Number subclass' valueOf()
- Use Character.valueOf()
- Remove unused import
- Make some private classes static
- Use final