@@ -88,13 +88,13 @@ public class BeanUtilsBenchCase extends TestCase {
         // Create input instances
         inBean = new BenchBean();
         inMap = new HashMap<>();
-        inMap.put("booleanProperty", new Boolean(inBean.getBooleanProperty()));
+        inMap.put("booleanProperty", Boolean.valueOf(inBean.getBooleanProperty()));
         inMap.put("byteProperty", Byte.valueOf(inBean.getByteProperty()));
         inMap.put("doubleProperty", Double.valueOf(inBean.getDoubleProperty()));
-        inMap.put("floatProperty", new Float(inBean.getFloatProperty()));
+        inMap.put("floatProperty", Float.valueOf(inBean.getFloatProperty()));
         inMap.put("intProperty", Integer.valueOf(inBean.getIntProperty()));
         inMap.put("longProperty", Long.valueOf(inBean.getLongProperty()));
-        inMap.put("shortProperty", new Short(inBean.getShortProperty()));
+        inMap.put("shortProperty", Short.valueOf(inBean.getShortProperty()));
         inMap.put("stringProperty", inBean.getStringProperty());
         inDyna = dynaClass.newInstance();
         Iterator<String> inKeys = inMap.keySet().iterator();
@@ -112,9 +112,7 @@ public class BeanUtilsBenchCase extends TestCase {
         // Create output instances
         outBean = new BenchBean();
         outDyna = dynaClass.newInstance();
-        final Iterator<String> outKeys = inMap.keySet().iterator();
-        while (outKeys.hasNext()) {
-            final String outKey = outKeys.next();
+        for (final String outKey : inMap.keySet()) {
             outDyna.set(outKey, inMap.get(outKey));
         }
 
