@@ -76,7 +76,7 @@ public class ConstructorUtilsTestCase extends TestCase {
             assertEquals("TEST",((TestBean)obj).getStringProperty());
         }
         {
-            final Object obj = ConstructorUtils.invokeConstructor(TestBean.class,new Float(17.3f));
+            final Object obj = ConstructorUtils.invokeConstructor(TestBean.class,Float.valueOf(17.3f));
             assertNotNull(obj);
             assertTrue(obj instanceof TestBean);
             assertEquals(17.3f,((TestBean)obj).getFloatProperty(),0.0f);
@@ -90,7 +90,7 @@ public class ConstructorUtilsTestCase extends TestCase {
     }
 
     public void testInvokeConstructorWithArgArray() throws Exception {
-        final Object[] args = { new Float(17.3f), "TEST" };
+        final Object[] args = { Float.valueOf(17.3f), "TEST" };
         final Object obj = ConstructorUtils.invokeConstructor(TestBean.class,args);
         assertNotNull(obj);
         assertTrue(obj instanceof TestBean);
@@ -128,7 +128,7 @@ public class ConstructorUtilsTestCase extends TestCase {
         }
         {
             try {
-                ConstructorUtils.invokeExactConstructor(TestBean.class,new Float(17.3f));
+                ConstructorUtils.invokeExactConstructor(TestBean.class,Float.valueOf(17.3f));
                 fail("Expected NoSuchMethodException");
             } catch(final NoSuchMethodException e) {
                 // expected
@@ -150,7 +150,7 @@ public class ConstructorUtilsTestCase extends TestCase {
 
     public void testInvokeExactConstructorWithArgArray() throws Exception {
         {
-            final Object[] args = { new Float(17.3f), "TEST" };
+            final Object[] args = { Float.valueOf(17.3f), "TEST" };
             try {
                 ConstructorUtils.invokeExactConstructor(TestBean.class,args);
                 fail("Expected NoSuchMethodException");
@@ -188,7 +188,7 @@ public class ConstructorUtilsTestCase extends TestCase {
             assertEquals("TEST",((TestBean)obj).getStringProperty());
         }
         {
-            final Object[] args = { new Float(17.3f), "TEST" };
+            final Object[] args = { Float.valueOf(17.3f), "TEST" };
             final Class<?>[] types = { Float.TYPE, String.class };
             final Object obj = ConstructorUtils.invokeExactConstructor(TestBean.class,args,types);
             assertNotNull(obj);
@@ -197,7 +197,7 @@ public class ConstructorUtilsTestCase extends TestCase {
             assertEquals("TEST",((TestBean)obj).getStringProperty());
         }
         {
-            final Object[] args = { new Float(17.3f), "TEST" };
+            final Object[] args = { Float.valueOf(17.3f), "TEST" };
             final Class<?>[] types = { Float.class, String.class };
             try {
                 ConstructorUtils.invokeExactConstructor(TestBean.class,args,types);
