@@ -126,10 +126,10 @@ public class ByteConverterTestCase extends NumberConverterTestBase<Byte> {
             "17",
             String.valueOf(Byte.MAX_VALUE),
             Byte.valueOf((byte)7),
-            new Short((short)8),
+            Short.valueOf((short)8),
             Integer.valueOf(9),
             Long.valueOf(10),
-            new Float(11.1),
+            Float.valueOf((float) 11.1),
             Double.valueOf(12.2)
         };
 
