@@ -91,10 +91,10 @@ public class LongConverterTestCase extends NumberConverterTestBase<Long> {
             "17",
             String.valueOf(Long.MAX_VALUE),
             Byte.valueOf((byte)7),
-            new Short((short)8),
+            Short.valueOf((short)8),
             Integer.valueOf(9),
             Long.valueOf(10),
-            new Float(11.1),
+            Float.valueOf((float) 11.1),
             Double.valueOf(12.2)
         };
 
